--- a/index.html
+++ b/index.html
@@ -18,16 +18,22 @@
 </head>
 <body>
     <section>
-        <div>
-            <img class="fade-in" src="logo.png" alt="Aaleeyah logo" />
-            <h2 class="fade-in">AALEEYAH Muslimah Wear</h2>
-            <div class="tile fade-in">
+        <div class="fade-in">
+            <img src="logo.png" alt="Aaleeyah logo" />
+            <h2>AALEEYAH Muslimah Wear</h2>
+            <div class="tile">
                 <a style="background-color: #59CE72;" href="https://wa.me/6281282503512">
                     <i class="fa-brands fa-whatsapp"></i>
                     <p>Admin Whatsapp</p>
                 </a>
             </div>
-            <p class="footer fade-in">@2023. All Rights Reserved AALEEYAH</p>
+            <!-- <div class="tile">
+                <a style="background-color: #FF5733;" href="https://shopee.com">
+                    <i class="fa-solid fa-bag-shopping"></i>
+                    <p>Shopee Store</p>
+                </a>
+            </div> -->
+            <p class="footer">@2023. All Rights Reserved AALEEYAH</p>
         </div>
     </section>
 </body>
