--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta http-equiv='cache-control' content='no-cache'> 
     <meta http-equiv='expires' content='0'> 
     <meta http-equiv='pragma' content='no-cache'>
-    
-    <link rel="icon" type="icon/x-icon" href="logo.png">
+
+    <link rel="icon" type="icon/x-icon" href="logo_bg1.png">
     <link rel="stylesheet" href="style.css">
-    <title>AALEEYAH</title>
+    <title>AALEEYAH — Muslimah Wear</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -26,18 +26,18 @@
             <img src="logo.png" alt="Aaleeyah logo" />
             <h2>AALEEYAH Muslimah Wear</h2>
             <div class="tile">
-                <a style="background-color: #59CE72;" href="https://wa.me/6281282503512">
+                <a style="background-color: #59CE72;" href="https://wa.me/6281282503512" target="_blank">
                     <i class="fa-brands fa-whatsapp"></i>
-                    <p>Admin Whatsapp</p>
+                    <p>Whatsapp</p>
                 </a>
             </div>
-            <!-- <div class="tile">
-                <a style="background-color: #FF5733;" href="https://shopee.com">
+            <div class="tile">
+                <a style="background-color: #FF5733;" href="https://shopee.com" target="_blank">
                     <i class="fa-solid fa-bag-shopping"></i>
-                    <p>Shopee Store</p>
+                    <p>Shopee</p>
                 </a>
-            </div> -->
-            <p class="footer">@2023. All Rights Reserved AALEEYAH</p>
+            </div>
+            <p class="footer">@2023. All Rights Reserved aaleeyahofficial.com</p>
         </div>
     </section>
 </body>
